syntax = "proto3";

option csharp_namespace = "ChatClient.Protos";

service ChatService {
	rpc Join(stream Message) returns (stream Message);
	rpc Insert(Message) returns (Empty);
	rpc GetAll(Empty) returns (stream Message);
}

message Empty {

}

message Message {
	string user = 1;
	string text = 2;
	int32 chatId = 3;
}

message Messages {
	repeated Message items = 1;
}